# esri2020-landcover-torchgeo

./: pyproject.toml
