[tool.poetry]
name = "esri2020-landcover-torchgeo"
version = "0.1.0"
description = "A project to practice and learn TorchGeo"
authors = ["96francesco <88101466+96francesco@users.noreply.github.com>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
rasterio = "^1.4.3"
torchvision = "^0.20.1"
torchmetrics = "^1.6.1"
numpy = "^2.2.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
